CQDOC-22342: Updated help options section